// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RequirementLink renders with index 1`] = `
<div
  aria-hidden="true"
  className="button-flex-container"
>
  <div
    className="ms-Button-label reqDescription"
  >
    <span
      className="reqIndex"
    >
      5
    </span>
    <span
      className="reqName"
    >
      Link with index name
      .
    </span>
    <span>
      Link with index description
    </span>
  </div>
  <StatusIcon
    level="requirement"
    status={0}
  />
</div>
`;

exports[`RequirementLink renders without index 1`] = `
<div
  aria-hidden="true"
  className="button-flex-container"
>
  <div
    className="ms-Button-label reqDescription"
  >
    <span
      className="reqName"
    >
      Link without index name
      .
    </span>
    <span>
      Link without index description
    </span>
  </div>
  <StatusIcon
    level="requirement"
    status={0}
  />
</div>
`;
